# UnitTestingServer-Client

./: CMakeLists.txt  Graph.cpp  Graph.h  GraphProves.cpp  GraphProves.h  ListProve.cpp  ListProve.h  Makefile  algo.txt  coordalgo.cpp  coordalgo.h  example.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
DoubleList/: DoubleList.hpp
DoubleNode/: DoubleNode.hpp
Graph/: DirectedGraph.hpp
GraphAlgo/: FloydWAlgo.cpp  FloydWAlgo.h  FloydWResponse.cpp  FloydWResponse.h
